# rust-social-app

./: Cargo.toml
src/: ddb_client.rs  main.rs  models.rs
