[package]
name = "social-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0.136"
chrono = "0.4.19"
serde_json = "1.0.2"
uuid = { version = "0.8", features = ["v4"] }

aws-config = "0.9.0"
aws-sdk-dynamodb = "0.9.0"
aws-smithy-http = "0.39.0"
